kubernetes/apps/kritika/kritika/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kritika-webhooks
  namespace: kritika
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - kritika-webhook.nikola.wtf
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hooks
      backendRefs:
        - name: kritika
          port: 8080
